# nas-xunlei

./: .gitignore  Cargo.toml  README.md  unpack.sh
.github/: dependabot.yml
.github/workflows/: CI.yml  Release.yml  Update.yml
examples/: download.rs  systemd.rs
libc/x86_64/: ld-linux-x86-64.so.2  libdl.so.2  libm.so.6  libpthread.so.0  libstdc++.so.6.0.29
openwrt/luci-app-xunlei/: Makefile
openwrt/luci-app-xunlei/luasrc/model/cbi/: xunlei.lua
openwrt/luci-app-xunlei/po/zh-cn/: xunlei.po
openwrt/luci-app-xunlei/root/etc/config/: xunlei
openwrt/luci-app-xunlei/root/etc/init.d/: xunlei
openwrt/luci-app-xunlei/root/etc/uci-defaults/: luci-xunlei
openwrt/nas-xunlei/: Makefile
openwrt/xunlei/: Makefile  genid.sh
openwrt/xunlei/files/: synoinfo.conf  xunlei.config  xunlei.init
src/: daemon.rs  launch.rs  launcher.rs  libc_asset.rs  main.rs  service.rs  standard.rs  systemd.rs  xunlei_asset.rs
src/.github/workflows/: CI.yml
