[package]
name = "nas-xunlei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.22"
anyhow = "1.0.66"
rust-embed = "6.6.0"
libc = "0.2.140"
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
rouille= "3.6.1"

[features]
daemon = []