[package]
name = "Xunlei"
version = "3.5.2"
edition = "2021"
description = "Synology Nas Thunder runs on Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.22"
anyhow = "1.0.66"
rust-embed = "6.6.0"
libc = "0.2.140"
rand = "0.8.5"
rouille= "3.6.1"
clap = { version = "4.0.18", features = ["derive"] }

[[bin]]
name = "xunlei"
path = "src/main.rs"