[package]
name = "xunlei"
version = "3.5.2"
edition = "2021"
description = "Synology Nas Thunder runs on Linux"
license = "MIT"
homepage = "https://github.com/messense/nas-xunlei"
repository = "https://github.com/messense/nas-xunlei.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.22"
anyhow = "1.0.66"
rust-embed = "6.6.0"
libc = "0.2.140"
rand = "0.8.5"
ureq = "2.6.2"
indicatif = "0.17.3"
rouille= "3.6.2"
signal-hook = "0.3.15"
clap = { version = "4.0.18", features = ["derive"] }

[features]
default = ["launch", "systemd"]
embed = ["launch", "systemd"]
launch = []
systemd = []

[[bin]]
name = "xunlei"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "gngpp <gngppz@gmail.com>"
copyright = "2023, gngpp <gngppz@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Synology Nas Thunder runs on Linux"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/xunlei", "usr/bin/xunlei", "755"],
    ["README.md", "usr/share/doc/xunlei/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/xunlei", dest = "/usr/bin/xunlei", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/xunlei/LICENSE", doc = true, mode = "0644" }
]